# python-for-data-science-treviglio

./: .pre-commit-config.yaml  LICENSE  README.md  pyproject.toml
.github/workflows/: pr-agent.yml  pr-title-semantic.yml
01 - The Pythonic World/: README.md
02 - The Pythonic Way/: README.md
03 - Python for Data Science/: README.md
03 - Python for Data Science/data/: power_generation.xlsx
03 - Python for Data Science/notebooks/: Polars Tutorial.ipynb
04 - Code for Humans/: README.md
05 - Final Project/: Final Project Solved.ipynb  Final Project.ipynb
