[project]
name = "python-for-data-science"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastexcel>=0.12.0",
    "jupyterlab>=4.3.1",
    "matplotlib>=3.9.2",
    "numpy>=2.1.3",
    "plotly>=5.24.1",
    "polars>=1.14.0",
    "streamlit>=1.40.1",
    "xlsxwriter>=3.2.0",
]
